removed updateVideoMetadataUI() as It's faster to create a new function than to fix and map existing one

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -570,6 +570,7 @@ body.theme-light {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
     word-break: break-word;
     max-width: calc(100% - 30px);
